tests/e2e/snapshots/e2e__e2e_tests__cli_contract__cli_contract_analyze_help.snap
---
source: tests/e2e/cli_contract.rs
assertion_line: 115
expression: stdout
---
Content analysis commands

Usage: obsidian-cli-inspector analyze [OPTIONS] <COMMAND>

Commands:
  bloat    Detect bloated notes and suggest refactoring
  related  Suggest related notes not directly linked
  help     Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
