tests/e2e/snapshots/e2e__e2e_tests__cli_contract__cli_contract_init_help.snap
---
source: tests/e2e/cli_contract.rs
assertion_line: 37
expression: stdout
---
Database initialization commands

Usage: obsidian-cli-inspector init [OPTIONS] <COMMAND>

Commands:
  init  Initialize or reinitialize the database
  help  Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
