tests/e2e/snapshots/e2e__e2e_tests__cli_contract__cli_contract_root_help.snap
---
source: tests/e2e/cli_contract.rs
assertion_line: 282
expression: stdout
---
Obsidian CLI Inspector - A local-first, read-only CLI/TUI for Obsidian vaults

ABOUT:
  This tool helps you inspect, query, and navigate your Obsidian vault from the terminal.
  All data is stored locally in a SQLite database for fast, offline access.

USE CASES:
  • Search: Find notes quickly with full-text search across your entire vault
  • Link Analysis: Discover backlinks, forward links, and unresolved references
  • Tag Management: Filter and organize notes by tags with AND/OR logic
  • Graph Exploration: Visualize note relationships and connection depths
  • Content Quality: Identify bloated notes that may need refactoring
  • Related Notes: Get AI-style suggestions for notes you might want to link
  • Scripting: Integrate with shell scripts and automation workflows
  • Interactive TUI: Browse your vault in a terminal user interface

WORKFLOW:
  1. Run 'init init' to set up the database
  2. Run 'index index' to scan and parse your vault
  3. Use query commands (search, backlinks, tags, etc.)
  4. Re-run 'index index' periodically to catch changes

CLI STRUCTURE:
  obsidian-cli-inspector <group> <function> [args...]

  Groups:
    init     - Database initialization
    index    - Vault indexing (scan, status)
    query    - Search and retrieval (search, backlinks, links, tags, unresolved)
    graph    - Graph operations (neighbors, paths, centrality, components)
    analyze  - Content analysis (bloat, related, similar, quality)
    diagnose - Diagnostics (orphans, broken-links, conflicts)
    view     - Display commands (stats, describe, health)

EXAMPLES:
  # Initialize and index your vault
  obsidian-cli-inspector init init
  obsidian-cli-inspector index index

  # Search for notes containing 'rust'
  obsidian-cli-inspector query search rust --limit 10

  # Find all notes linking to 'Project Ideas'
  obsidian-cli-inspector query backlinks "Project Ideas"

  # List all notes tagged with 'work'
  obsidian-cli-inspector query tags work

  # Find large notes that might need splitting
  obsidian-cli-inspector analyze bloat --threshold 100000

  # Launch interactive mode
  obsidian-cli-inspector tui

CONFIG:
  Place config at ~/.config/obsidian-cli-inspector/config.toml
  Specify vault path and database location there.


Usage: obsidian-cli-inspector [OPTIONS] <COMMAND>

Commands:
  init      Database initialization commands
  index     Vault indexing commands
  query     Search and retrieval commands
  analyze   Content analysis commands
  diagnose  Diagnostic commands
  view      Display commands
  tui       Launch interactive TUI
  help      Print this message or the help of the given subcommand(s)

Options:
  -c, --config <FILE>
          Path to config file

  -o, --output <FORMAT>
          Output in JSON format (for machine integration)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
