tests/e2e/snapshots/e2e__e2e_tests__cli_contract__cli_contract_view_help.snap
---
source: tests/e2e/cli_contract.rs
assertion_line: 178
expression: stdout
---
Display commands

Usage: obsidian-cli-inspector view [OPTIONS] <COMMAND>

Commands:
  stats     Show statistics about the vault
  describe  Describe file metadata (without displaying paragraphs)
  help      Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
